[gd_scene load_steps=29 format=3 uid="uid://daacdarp2surq"]

[ext_resource type="Script" path="res://Title/Title.gd" id="1_rx3fc"]
[ext_resource type="Shader" path="res://Resources/Pattern.gdshader" id="2_lnvny"]
[ext_resource type="Texture2D" uid="uid://boebky8i0p1ji" path="res://Resources/pattern.png" id="3_xcuoq"]
[ext_resource type="Texture2D" uid="uid://bvr0rd2aqx8po" path="res://Title/logo.png" id="4_h54g3"]
[ext_resource type="Texture2D" uid="uid://cwx4044o3f3kr" path="res://Title/Buttons/main_buttons.png" id="5_c5q1l"]
[ext_resource type="Texture2D" uid="uid://dqeb5fugwvsr0" path="res://Resources/grabber.png" id="7_4igj7"]
[ext_resource type="Texture2D" uid="uid://cx087k1tobpej" path="res://Resources/slider.png" id="8_5aelc"]
[ext_resource type="Texture2D" uid="uid://dbd8jiiy6sq2c" path="res://Resources/slider_used.png" id="9_qb3e0"]
[ext_resource type="Texture2D" uid="uid://cs2fjk8n20fku" path="res://Resources/volume.png" id="10_nd2ia"]
[ext_resource type="AudioStream" uid="uid://0b7mum1n2byd" path="res://Audio/BGM/title.mp3" id="10_qjo3t"]
[ext_resource type="Texture2D" uid="uid://brdu416jubmv6" path="res://Resources/close.png" id="11_cvyma"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_4ywyt"]
shader = ExtResource("2_lnvny")
shader_parameter/direction = Vector2(-1, -1)
shader_parameter/speed_scale = 0.3

[sub_resource type="Animation" id="Animation_tbmp7"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Logo:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(96, 54)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CenterContainer/Play:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CenterContainer3/Credits:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("CenterContainer/Play:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("CenterContainer3/Credits:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Volume:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Volume:modulate")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("Close:visible")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("Close:modulate")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_rtx3y"]
resource_name = "logo"
length = 3.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Logo:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(96, 56), Vector2(96, 52)]
}

[sub_resource type="Animation" id="Animation_u1xif"]
resource_name = "logo_with_buttons"
length = 3.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Logo:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.6, 3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(96, 36), Vector2(96, 38), Vector2(96, 36)]
}

[sub_resource type="Animation" id="Animation_6y0l2"]
resource_name = "show_buttons"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CenterContainer/Play:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.4, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CenterContainer3/Credits:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.4, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CenterContainer/Play:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.4),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("CenterContainer3/Credits:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.4),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Volume:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0.4),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Volume:modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0.4, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Close:visible")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0.4),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("Close:modulate")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0.4, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_x3kt1"]
_data = {
"RESET": SubResource("Animation_tbmp7"),
"logo": SubResource("Animation_rtx3y"),
"logo_with_buttons": SubResource("Animation_u1xif"),
"show_buttons": SubResource("Animation_6y0l2")
}

[sub_resource type="AtlasTexture" id="AtlasTexture_lmxdl"]
atlas = ExtResource("5_c5q1l")
region = Rect2(6, 6, 23, 7)

[sub_resource type="AtlasTexture" id="AtlasTexture_5xwf3"]
atlas = ExtResource("5_c5q1l")
region = Rect2(56, 5, 23, 7)

[sub_resource type="AtlasTexture" id="AtlasTexture_hqkrd"]
atlas = ExtResource("5_c5q1l")
region = Rect2(31, 6, 23, 7)

[sub_resource type="AtlasTexture" id="AtlasTexture_1bbat"]
atlas = ExtResource("5_c5q1l")
region = Rect2(6, 30, 36, 7)

[sub_resource type="AtlasTexture" id="AtlasTexture_2fyi0"]
atlas = ExtResource("5_c5q1l")
region = Rect2(82, 29, 36, 7)

[sub_resource type="AtlasTexture" id="AtlasTexture_yqnwm"]
atlas = ExtResource("5_c5q1l")
region = Rect2(44, 30, 36, 7)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_u4lpj"]
texture = ExtResource("8_5aelc")
texture_margin_top = 1.0
texture_margin_bottom = 1.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_pgcvi"]
texture = ExtResource("9_qb3e0")
texture_margin_top = 1.0
texture_margin_bottom = 1.0

[sub_resource type="AtlasTexture" id="AtlasTexture_l37ql"]
atlas = ExtResource("11_cvyma")
region = Rect2(6, 6, 7, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_s2ncl"]
atlas = ExtResource("11_cvyma")
region = Rect2(30, 6, 7, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_58msp"]
atlas = ExtResource("11_cvyma")
region = Rect2(18, 6, 7, 8)

[node name="Title" type="Node2D"]
script = ExtResource("1_rx3fc")

[node name="BG" type="ColorRect" parent="."]
offset_right = 192.0
offset_bottom = 108.0

[node name="Pattern" type="TextureRect" parent="."]
texture_filter = 1
material = SubResource("ShaderMaterial_4ywyt")
offset_right = 192.0
offset_bottom = 108.0
texture = ExtResource("3_xcuoq")
stretch_mode = 1

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(96, 54)

[node name="Logo" type="Sprite2D" parent="."]
position = Vector2(96, 54)
texture = ExtResource("4_h54g3")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_x3kt1")
}

[node name="CenterContainer" type="CenterContainer" parent="."]
offset_left = 48.0
offset_top = 66.0
offset_right = 144.0
offset_bottom = 73.0
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Play" type="TextureButton" parent="CenterContainer"]
visible = false
layout_mode = 2
texture_normal = SubResource("AtlasTexture_lmxdl")
texture_pressed = SubResource("AtlasTexture_5xwf3")
texture_hover = SubResource("AtlasTexture_hqkrd")

[node name="CenterContainer3" type="CenterContainer" parent="."]
offset_left = 48.0
offset_top = 78.0
offset_right = 144.0
offset_bottom = 85.0

[node name="Credits" type="TextureButton" parent="CenterContainer3"]
visible = false
layout_mode = 2
texture_normal = SubResource("AtlasTexture_1bbat")
texture_pressed = SubResource("AtlasTexture_2fyi0")
texture_hover = SubResource("AtlasTexture_yqnwm")

[node name="Volume" type="HSlider" parent="."]
visible = false
modulate = Color(1, 1, 1, 0)
offset_left = 144.0
offset_top = 6.0
offset_right = 186.0
offset_bottom = 12.0
theme_override_icons/grabber = ExtResource("7_4igj7")
theme_override_icons/grabber_highlight = ExtResource("7_4igj7")
theme_override_icons/grabber_disabled = ExtResource("7_4igj7")
theme_override_styles/slider = SubResource("StyleBoxTexture_u4lpj")
theme_override_styles/grabber_area = SubResource("StyleBoxTexture_pgcvi")
theme_override_styles/grabber_area_highlight = SubResource("StyleBoxTexture_pgcvi")
max_value = 1.0
step = 0.001
value = 0.2
scrollable = false

[node name="VolumeSprite" type="Sprite2D" parent="Volume"]
position = Vector2(-7, 3)
texture = ExtResource("10_nd2ia")
hframes = 3
metadata/_edit_lock_ = true

[node name="Close" type="TextureButton" parent="."]
visible = false
modulate = Color(1, 1, 1, 0)
offset_left = 6.0
offset_top = 6.0
offset_right = 13.0
offset_bottom = 13.0
texture_normal = SubResource("AtlasTexture_l37ql")
texture_pressed = SubResource("AtlasTexture_s2ncl")
texture_hover = SubResource("AtlasTexture_58msp")

[node name="BGM" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("10_qjo3t")
autoplay = true
bus = &"BGM"

[connection signal="pressed" from="CenterContainer/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="CenterContainer3/Credits" to="." method="_on_credits_pressed"]
[connection signal="value_changed" from="Volume" to="." method="change_volume"]
[connection signal="pressed" from="Close" to="." method="close"]
